--- a/terraform/azure/config.auto.tfvars.json
+++ b/terraform/azure/config.auto.tfvars.json
@@ -7,5 +7,6 @@
   "key_vault_name": "yura-kv-dev3",
   "postgres_server_name": "yura-postgres-server-dev182",
   "postgres_db_name": "project_db",
-  "postgres_admin_user": "pgadmin"
+  "postgres_admin_user": "pgadmin",
+  "project_name": "teachua"
 }
