Add database configuration automation script

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 **/.terraform.lock.hcl
 **/terraform.tfstate
 **/terraform.tfstate.backup
+**/terraform.tfvars
 setenv.sh
+database-config.env
+setenv.sh.backup.*
