--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 **/terraform.tfstate
 **/terraform.tfstate.backup
 **/terraform.tfvars
+**/terraform.tfstate.*
 setenv.sh
 database-config.env
 setenv.sh.backup.*
