--- a/ansible/deploy_backend_final.yml
+++ b/ansible/deploy_backend_final.yml
@@ -1,5 +1,5 @@
 ---
-- name: Deploy TeachUA Backend Service
+- name: Deploy Backend with Real Credentials
   hosts: gcp_group_instance_back_group
   become: yes
   vars:
@@ -45,25 +45,41 @@
         group: root
         mode: '0644'
 
-    - name: Create Google Service Account JSON credentials file
+    - name: Create Google Service Account credentials file
       copy:
         content: |
-          {
-            "type": "service_account",
-            "project_id": "speak-ukrainian-362008",
-            "private_key_id": "dummy-key-id",
-            "private_key": "-----BEGIN PRIVATE KEY-----\nMIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCLF3l+rUwf1STb\nISicYDMQL4RwIc49ghH5UuN065IJwYbw8jF2VDZCa+dKiRDK7igKJwRtlxtd08zi\nCbX/anLTGPimSjOJPcV0h+1g1xrmrjQEDjq7PU6QNbGSMJW/DMk3joHh2iX1B6ph\ns0k9zltDQSmBmviY+fw2VtnovU2aMxvkdHX/n0t+AJcAkjRIL1E+lk5fE1+TNqbJ\nMCpDMQWbNi+9WOurnCs6S6LzF/T0UThhwHCvIU7Uvj9R7/h6L+Yo5JsvWBfqJdv9\nKagulG9fK8ufTAa2aKA4TOFA2P10/xFfHGf2laGsnkvyYMa9m6sRBwQb9r6Wg5Xr\nyxdFhbQlAgMBAAECggEAAkn4G2ARtSJmUV7Z0rz4iicmCExeHwABeLdm+9kWlaeE\nJ3ns23QmUnCBJWZdCuHhcc1TktQeRKyEHiInxxTC3/t0uBPXhkYodjL4cpQHos0y\nGPD9AXDQVqozimLXTAYTV6E2PPfAkSg3oxT2uxgmw1QSsUnSFn5iqqhCPMTEvqlb\ncalryfR/DKmhnlKBLVjwlycnvZMTbi4E0hmsUYWd4bsnS4xAnSE99+2c0JTJa28I\na/INptaah64FsuqhlZkJRVHuN9AhfCM6FVRbbwg16oRqakU+FhI9lhf3Fj3ibtdg\nfqD9PxhBrRfAoU6aFUMgXUuWn82hLzpeuY6HFNZf8QKBgQC+Le9VIr0yTvXJwQgJ\nb/z0iJsv+FUT594y0P4I1f4I9wcIpkLWTQrY5/14L8zNX0Tn0U93o8vgX2dpTuub\npRfYo3xXB1+VKHvIltmlcM4h2Gw7Ae2HXV8tvkkbWc6gLWZekRj56+Ytxp16ruB2\nmIYPRqJ9xId0ZjEXIGp9KX1x6QKBgQC7Ox8SiBNZ1BZ8FG2u+WZ6mNherFXaYnxp\n+MprrRDyluIe+M+MFKmCd28adQ6gOxjt8Ye8qQDXbQTaxg3bacaMbYEP4K2NBKuQ\n9AjbXWA1/ODP8oveVrRQVc3ZFIDE1i4o5K+M4SU9sifPtOhORzcqd3G3vVLPB3tz\nxjbK656u3QKBgGqWnivuI3Hd1V31ZUa80F5RbgDtwuk8LEn43lgfb5igsv2DCbTI\nS0sUgvhoefWk7p6qrkpUsECZ2ACqrdx3JC1UO60fQc/8d5wOB//0gGNxw/8ybmlO\nyLh/jMPairc1mslns0LnlwOS7NJEzyNJCuHm6c1pZ62yVNMsZOKvbVJ5AoGAL4KD\nEfrBnku5IOc2Je5XWMisLungJzhShbmB8+zIniY3XtCYKd2cXeTcpoQJoBMe8lIV\ntYPVGNUrJDCZl5GxtjSbSWIj5+LFflTOYovBPDHdAidz4olx2+jKAUm4mzoWIH5X\nJZKEFrG8dHJdeG+NyhLhIlTCTJKDew9THA7KB2kCgYEAjXITcPn0yst87x8NUEmB\ntLNkgrehC8XvayvZ/VcJkxAcpfLlx5BeKXFSQ58Vqr3gfM+dqsPn1K+dwC1KhGSr\naorCd0mfeM91as72hQ0RKJsOaCH5BpgX0ogr1GKqL/cSVwmvPbcNBD6fwB4gGxR7\nTdu065ULlyiXwQ1kyeoUodw=\n-----END PRIVATE KEY-----\n",
-            "client_email": "speak-ukrainian@speak-ukrainian-362008.iam.gserviceaccount.com",
-            "client_id": "dummy-client-id",
-            "auth_uri": "https://accounts.google.com/o/oauth2/auth",
-            "token_uri": "https://oauth2.googleapis.com/token",
-            "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-            "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/speak-ukrainian%40speak-ukrainian-362008.iam.gserviceaccount.com"
-          }
-        dest: "{{ backend_dest }}/google-service-account.json"
+          -----BEGIN PRIVATE KEY-----
+          MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCLF3l+rUwf1STb
+          ISicYDMQL4RwIc49ghH5UuN065IJwYbw8jF2VDZCa+dKiRDK7igKJwRtlxtd08zi
+          CbX/anLTGPimSjOJPcV0h+1g1xrmrjQEDjq7PU6QNbGSMJW/DMk3joHh2iX1B6ph
+          s0k9zltDQSmBmviY+fw2VtnovU2aMxvkdHX/n0t+AJcAkjRIL1E+lk5fE1+TNqbJ
+          MCpDMQWbNi+9WOurnCs6S6LzF/T0UThhwHCvIU7Uvj9R7/h6L+Yo5JsvWBfqJdv9
+          KagulG9fK8ufTAa2aKA4TOFA2P10/xFfHGf2laGsnkvyYMa9m6sRBwQb9r6Wg5Xr
+          yxdFhbQlAgMBAAECggEAAkn4G2ARtSJmUV7Z0rz4iicmCExeHwABeLdm+9kWlaeE
+          J3ns23QmUnCBJWZdCuHhcc1TktQeRKyEHiInxxTC3/t0uBPXhkYodjL4cpQHos0y
+          GPD9AXDQVqozimLXTAYTV6E2PPfAkSg3oxT2uxgmw1QSsUnSFn5iqqhCPMTEvqlb
+          calryfR/DKmhnlKBLVjwlycnvZMTbi4E0hmsUYWd4bsnS4xAnSE99+2c0JTJa28I
+          a/INptaah64FsuqhlZkJRVHuN9AhfCM6FVRbbwg16oRqakU+FhI9lhf3Fj3ibtdg
+          fqD9PxhBrRfAoU6aFUMgXUuWn82hLzpeuY6HFNZf8QKBgQC+Le9VIr0yTvXJwQgJ
+          b/z0iJsv+FUT594y0P4I1f4I9wcIpkLWTQrY5/14L8zNX0Tn0U93o8vgX2dpTuub
+          pRfYo3xXB1+VKHvIltmlcM4h2Gw7Ae2HXV8tvkkbWc6gLWZekRj56+Ytxp16ruB2
+          mIYPRqJ9xId0ZjEXIGp9KX1x6QKBgQC7Ox8SiBNZ1BZ8FG2u+WZ6mNherFXaYnxp
+          +MprrRDyluIe+M+MFKmCd28adQ6gOxjt8Ye8qQDXbQTaxg3bacaMbYEP4K2NBKuQ
+          9AjbXWA1/ODP8oveVrRQVc3ZFIDE1i4o5K+M4SU9sifPtOhORzcqd3G3vVLPB3tz
+          xjbK656u3QKBgGqWnivuI3Hd1V31ZUa80F5RbgDtwuk8LEn43lgfb5igsv2DCbTI
+          S0sUgvhoefWk7p6qrkpUsECZ2ACqrdx3JC1UO60fQc/8d5wOB//0gGNxw/8ybmlO
+          yLh/jMPairc1mslns0LnlwOS7NJEzyNJCuHm6c1pZ62yVNMsZOKvbVJ5AoGAL4KD
+          EfrBnku5IOc2Je5XWMisLungJzhShbmB8+zIniY3XtCYKd2cXeTcpoQJoBMe8lIV
+          tYPVGNUrJDCZl5GxtjSbSWIj5+LFflTOYovBPDHdAidz4olx2+jKAUm4mzoWIH5X
+          JZKEFrG8dHJdeG+NyhLhIlTCTJKDew9THA7KB2kCgYEAjXITcPn0yst87x8NUEmB
+          tLNkgrehC8XvayvZ/VcJkxAcpfLlx5BeKXFSQ58Vqr3gfM+dqsPn1K+dwC1KhGSr
+          aorCd0mfeM91as72hQ0RKJsOaCH5BpgX0ogr1GKqL/cSVwmvPbcNBD6fwB4gGxR7
+          Tdu065ULlyiXwQ1kyeoUodw=
+          -----END PRIVATE KEY-----
+        dest: "{{ backend_dest }}/google-service-account.key"
         mode: '0600'
 
-    - name: Configure systemd service for Spring Boot
+    - name: Create systemd service file with real credentials
       copy:
         content: |
           [Unit]
@@ -88,30 +104,30 @@
           Environment=UPLOAD_PATH={{ backend_dest }}/uploads
           Environment=URL_LOGS=/var/log/teachua
           
-          # Database configuration
+          # Database configuration (from setenv.sh)
           Environment=DEV2_DATASOURCE_URL=jdbc:postgresql://34.173.19.35:5432/teachua
           Environment=DEV2_DATASOURCE_USER=teachua_user
           Environment=DEV2_DATASOURCE_PASSWORD=securepassword123
           
-          # JWT configuration
+          # JWT configuration (from setenv.sh)
           Environment=JWT_ACCESS_SECRET_KEY=4A404D635166546A576E5A7234753778214125442A472D4B6150645267556B58703273357638792F423F4528482B4D6251655468566D597133743677397A2443
           Environment=JWT_REFRESH_SECRET_KEY=482B4D6251655468566D597133743677397A24432646294A404E635266556A586E5A7234753778214125442A472D4B6150645367566B59703373357638792F42
           
-          # Mail configuration
+          # Mail configuration (from setenv.sh)
           Environment=USER_EMAIL=speak.ukrainian.org.ua@gmail.com
           Environment=SEND_PASSWORD=jtaenojlprbiftra
           
-          # OAuth2 configuration
+          # OAuth2 configuration (from setenv.sh)
           Environment=OAUTH2_GOOGLE_CLIENT_ID=<set-in-env>
           Environment=OAUTH2_GOOGLE_CLIENT_SECRET=<set-in-env>
           Environment=OAUTH2_FACEBOOK_CLIENT_ID=<set-in-env>
           Environment=OAUTH2_FACEBOOK_CLIENT_SECRET=<set-in-env>
           
-          # Google Service Account configuration
-          Environment=GOOGLE_APPLICATION_CREDENTIALS={{ backend_dest }}/google-service-account.json
+          # Google Service Account configuration (from setenv.sh)
           Environment=SERVICE_ACCOUNT_CLIENT_EMAIL=speak-ukrainian@speak-ukrainian-362008.iam.gserviceaccount.com
+          Environment=SERVICE_ACCOUNT_PRIVATE_KEY=-----BEGIN PRIVATE KEY-----\nMIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCLF3l+rUwf1STb\nISicYDMQL4RwIc49ghH5UuN065IJwYbw8jF2VDZCa+dKiRDK7igKJwRtlxtd08zi\nCbX/anLTGPimSjOJPcV0h+1g1xrmrjQEDjq7PU6QNbGSMJW/DMk3joHh2iX1B6ph\ns0k9zltDQSmBmviY+fw2VtnovU2aMxvkdHX/n0t+AJcAkjRIL1E+lk5fE1+TNqbJ\nMCpDMQWbNi+9WOurnCs6S6LzF/T0UThhwHCvIU7Uvj9R7/h6L+Yo5JsvWBfqJdv9\nKagulG9fK8ufTAa2aKA4TOFA2P10/xFfHGf2laGsnkvyYMa9m6sRBwQb9r6Wg5Xr\nyxdFhbQlAgMBAAECggEAAkn4G2ARtSJmUV7Z0rz4iicmCExeHwABeLdm+9kWlaeE\nJ3ns23QmUnCBJWZdCuHhcc1TktQeRKyEHiInxxTC3/t0uBPXhkYodjL4cpQHos0y\nGPD9AXDQVqozimLXTAYTV6E2PPfAkSg3oxT2uxgmw1QSsUnSFn5iqqhCPMTEvqlb\ncalryfR/DKmhnlKBLVjwlycnvZMTbi4E0hmsUYWd4bsnS4xAnSE99+2c0JTJa28I\na/INptaah64FsuqhlZkJRVHuN9AhfCM6FVRbbwg16oRqakU+FhI9lhf3Fj3ibtdg\nfqD9PxhBrRfAoU6aFUMgXUuWn82hLzpeuY6HFNZf8QKBgQC+Le9VIr0yTvXJwQgJ\nb/z0iJsv+FUT594y0P4I1f4I9wcIpkLWTQrY5/14L8zNX0Tn0U93o8vgX2dpTuub\npRfYo3xXB1+VKHvIltmlcM4h2Gw7Ae2HXV8tvkkbWc6gLWZekRj56+Ytxp16ruB2\nmIYPRqJ9xId0ZjEXIGp9KX1x6QKBgQC7Ox8SiBNZ1BZ8FG2u+WZ6mNherFXaYnxp\n+MprrRDyluIe+M+MFKmCd28adQ6gOxjt8Ye8qQDXbQTaxg3bacaMbYEP4K2NBKuQ\n9AjbXWA1/ODP8oveVrRQVc3ZFIDE1i4o5K+M4SU9sifPtOhORzcqd3G3vVLPB3tz\nxjbK656u3QKBgGqWnivuI3Hd1V31ZUa80F5RbgDtwuk8LEn43lgfb5igsv2DCbTI\nS0sUgvhoefWk7p6qrkpUsECZ2ACqrdx3JC1UO60fQc/8d5wOB//0gGNxw/8ybmlO\nyLh/jMPairc1mslns0LnlwOS7NJEzyNJCuHm6c1pZ62yVNMsZOKvbVJ5AoGAL4KD\nEfrBnku5IOc2Je5XWMisLungJzhShbmB8+zIniY3XtCYKd2cXeTcpoQJoBMe8lIV\ntYPVGNUrJDCZl5GxtjSbSWIj5+LFflTOYovBPDHdAidz4olx2+jKAUm4mzoWIH5X\nJZKEFrG8dHJdeG+NyhLhIlTCTJKDew9THA7KB2kCgYEAjXITcPn0yst87x8NUEmB\ntLNkgrehC8XvayvZ/VcJkxAcpfLlx5BeKXFSQ58Vqr3gfM+dqsPn1K+dwC1KhGSr\naorCd0mfeM91as72hQ0RKJsOaCH5BpgX0ogr1GKqL/cSVwmvPbcNBD6fwB4gGxR7\nTdu065ULlyiXwQ1kyeoUodw=\n-----END PRIVATE KEY-----
           
-          # Production configuration
+          # Additional production configuration
           Environment=PROD_BASE_URL={{ backend_url }}
           Environment=GOOGLE_MAP_KEY=<set-in-env>
 
@@ -119,7 +135,7 @@
           WantedBy=multi-user.target
         dest: /etc/systemd/system/spring-boot.service
 
-    - name: Create application log directory
+    - name: Create log directory
       file:
         path: /var/log/teachua
         state: directory
@@ -131,13 +147,13 @@
       systemd:
         daemon_reload: yes
 
-    - name: Enable and start backend service
+    - name: Enable and start spring boot service
       systemd:
         name: spring-boot
         enabled: yes
         state: started
 
-    - name: Wait for backend service startup
+    - name: Wait for backend to start
       wait_for:
         port: 8080
         host: localhost
@@ -146,27 +162,27 @@
       register: port_check
       ignore_errors: yes
 
-    - name: Check service status
+    - name: Get backend service status
       systemd:
         name: spring-boot
       register: service_status
       
-    - name: Display service information
+    - name: Show service status
       debug:
         msg: 
           - "Service active: {{ service_status.status.ActiveState }}"
           - "Service sub-state: {{ service_status.status.SubState }}"
           - "Port 8080 status: {{ 'OPEN' if port_check is succeeded else 'CLOSED' }}"
       
-    - name: Retrieve recent service logs
+    - name: Show recent logs
       shell: "journalctl -u spring-boot -n 100 --no-pager | tail -50"
       register: backend_logs
       
-    - name: Display service logs
+    - name: Display logs
       debug:
         msg: "{{ backend_logs.stdout_lines | default([]) }}"
         
-    - name: Test backend API endpoints
+    - name: Test API endpoints
       uri:
         url: "{{ item }}"
         method: GET
@@ -181,16 +197,16 @@
         - "http://localhost:8080/actuator/health"
       ignore_errors: yes
       
-    - name: Display API endpoint test results
+    - name: Show API check results
       debug:
         msg: "API endpoint {{ item.url }}: {{ item.status | default('Failed') }}"
       loop: "{{ api_checks.results }}"
       when: api_checks is defined
 
-    - name: Display deployment summary
+    - name: Final success message
       debug:
         msg: 
-          - "Backend deployment process completed"
+          - "🎉 Backend deployment completed!"
           - "Backend URL: {{ backend_url }}"
           - "Swagger UI: {{ backend_url }}/swagger-ui/index.html"
           - "Health Check: {{ backend_url }}/actuator/health"
