--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -5,7 +5,7 @@ back-xwf6 ansible_host=34.132.63.67 ansible_user=rybenligst ansible_ssh_common_a
 front-91nn ansible_host=34.63.234.5 ansible_user=rybenligst ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
 
 [bastion]
-bastion ansible_host=34.46.211.220 ansible_user=rybenligst ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+bastion-host ansible_host=34.46.211.220 ansible_user=rybenligst ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
 
 [all:vars]
 ansible_ssh_private_key_file=~/.ssh/google_compute_engine 
